Bug 167326 - When Autofit is on in headers - headers contain extra white space, and tables get hidden(data loss) in between pages
Summary: When Autofit is on in headers - headers contain extra white space, and tables...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.8.0.3 release
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Header-Footer
  Show dependency treegraph
 
Reported: 2025-07-01 13:57 UTC by dames02.00
Modified: 2025-10-20 15:32 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample1 odt - AutofitOn (329.63 KB, application/octet-stream)
2025-07-01 13:57 UTC, dames02.00
Details
Sample 1 odt - Autofit Off (736.24 KB, application/octet-stream)
2025-07-01 13:58 UTC, dames02.00
Details
Sample 2 odt - Autofit On (27.35 KB, application/octet-stream)
2025-07-01 13:58 UTC, dames02.00
Details
Sample 2 odt - Autofit Off (31.55 KB, application/octet-stream)
2025-07-01 13:59 UTC, dames02.00
Details
Sample 2 Screenshot of data loss (125.72 KB, image/png)
2025-07-01 14:00 UTC, dames02.00
Details
Minimal reproducer (1.76 KB, application/vnd.oasis.opendocument.text)
2025-10-11 13:00 UTC, Mike Kaganski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description dames02.00 2025-07-01 13:57:02 UTC
Description:
When Autofit is set to on, upon opening the odt headers contain extra white space, but when removing Autofit this is fixed (as shown in sample 1). Also, with Autofit on tables get hidden in between pages(data loss), and when turning Autofit off, this gets fixed (as shown in sample 2). For sample 2 I have provided a screenshot as well so you can easily see the data loss in-between pages.

This seems to be a very similar issue to what this bug I'm linking here was opened for: https://bugs.documentfoundation.org/show_bug.cgi?id=166978. The fix for this bug removed the issue in a lot of forms, yet Autofit being on is still a very prevalent issue. 

Steps to Reproduce:
1.Have Autofit set to on, and open odt

Actual Results:
After opening the odt, we could see the bug immediately without any further action

Expected Results:
The extra space in the header should not have been there, and the table should have been appearing.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
I have both sample 1 and 2 attached along with the version of the odt's that work properly with Autofit off. Also, I have a screenshot of sample 2's data loss.
Comment 1 dames02.00 2025-07-01 13:57:41 UTC
Created attachment 201586 [details]
Sample1 odt - AutofitOn
Comment 2 dames02.00 2025-07-01 13:58:05 UTC
Created attachment 201587 [details]
Sample 1 odt - Autofit Off
Comment 3 dames02.00 2025-07-01 13:58:51 UTC
Created attachment 201588 [details]
Sample 2 odt - Autofit On
Comment 4 dames02.00 2025-07-01 13:59:13 UTC
Created attachment 201589 [details]
Sample 2 odt - Autofit Off
Comment 5 dames02.00 2025-07-01 14:00:47 UTC
Created attachment 201590 [details]
Sample 2 Screenshot of data loss
Comment 6 Mike Kaganski 2025-07-02 05:08:04 UTC
(In reply to dames02.00 from comment #1)
> Created attachment 201586 [details]

This regressed somewhere between 24.2.0.3 and 24.8.0.3.
Comment 7 m_a_riosv 2025-07-02 22:55:44 UTC
Maybe it is in relation with hidden sections, there are a lot of them.
Comment 8 abhishah4444 2025-07-08 21:25:40 UTC
Seems like data loss is persistent and unknown to producer/creator.
Comment 9 abhishah4444 2025-09-12 18:51:16 UTC
As LO is open source, does it have timeline when bugs will be fixed or it very much depends upon community which bugs are high priority
Comment 10 BogdanB 2025-09-12 18:56:01 UTC
(In reply to abhishah4444 from comment #9)
> As LO is open source, does it have timeline when bugs will be fixed or it
> very much depends upon community which bugs are high priority

It has a timeline for each release, but not for a bug specific.
Each developer is free to choose what can solved. 

LibreOffice is also offered to clients who pay to see some changes that are needed for them. In this case the bug is solved for them with a timeline.

Here are developers that can be paid to solve a specific bug:
https://www.libreoffice.org/get-help/professional-support/

But, meanwhile, anyone is free to study the code and improve it.
Comment 11 Buovjaga 2025-10-09 19:01:54 UTC
(In reply to Mike Kaganski from comment #6)
> (In reply to dames02.00 from comment #1)
> > Created attachment 201586 [details]
> 
> This regressed somewhere between 24.2.0.3 and 24.8.0.3.

Bibisected with linux-64-24.8 to c60ad7e0fbf3cc86af167f5e98b38c25620ada7e
tdf#160958: merge hidden section's follows; move first-on-page section back
Comment 12 Mike Kaganski 2025-10-11 13:00:40 UTC
Created attachment 203267 [details]
Minimal reproducer
Comment 13 Mike Kaganski 2025-10-11 17:38:31 UTC
https://gerrit.libreoffice.org/c/core/+/192232
Comment 14 Commit Notification 2025-10-11 19:54:29 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/0ba44065385cbee7c490cf4a97641c19edc79a63

tdf#167326: Let CalcHeightWithFlys take hidden frame state into account

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2025-10-20 15:32:03 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/80850b7d086e2b0fc7f792130cce951d5d946573

tdf#167326: Let CalcHeightWithFlys take hidden frame state into account

It will be available in 25.8.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.