tdf#167326: Let CalcHeightWithFlys take hidden frame state into account

Table cells use that function to calculate the min cell height. In the
bugdoc, sections inside a cell contained flys, and were hidden. When
the min cell height was calculated, the sections' flys were considered,
despite they were hidden.

Change-Id: Ie5a8fb54a1c9fe21cc5f4d474bd24feabb660330
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192232
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins